@@ -12,6 +12,7 @@ Version 1.6.12 | Tested on CB 1.6.2-R0.1 and mcMMO 1.4.07
  + Added config reload command; /tftaddon reload
  ! Updated Metrics
  = Fixed minor typo in /tfthelp
+ - Removed UpdateChecker
 
 Version 1.6.11 | Tested on CB 1.5.1-R0.1 and mcMMO 1.4.04
  = Fixed a bug with the level up announcements
